Defined Engine Methods & Linked the SDL Library

--- a/resource-game.cbp
+++ b/resource-game.cbp
@@ -31,7 +31,20 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add directory="C:/Code Librarys/SDL2-2.0.3/i686-w64-mingw32/include" />
+			<Add directory="C:/Code Librarys/SDL2_ttf-2.0.12/i686-w64-mingw32/include" />
+			<Add directory="C:/Code Librarys/SDL2_mixer-2.0.0/i686-w64-mingw32/include" />
+			<Add directory="C:/Code Librarys/SDL2_image-2.0.0/i686-w64-mingw32/include" />
 		</Compiler>
+		<Linker>
+			<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf" />
+			<Add directory="C:/Code Librarys/SDL2-2.0.3/i686-w64-mingw32/lib" />
+			<Add directory="C:/Code Librarys/SDL2_ttf-2.0.12/i686-w64-mingw32/lib" />
+			<Add directory="C:/Code Librarys/SDL2_mixer-2.0.0/i686-w64-mingw32/lib" />
+			<Add directory="C:/Code Librarys/SDL2_image-2.0.0/i686-w64-mingw32/lib" />
+		</Linker>
+		<Unit filename="engine.cpp" />
+		<Unit filename="engine.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
